use long[]